# paper-robot

./: .gitignore  README.md  useful_ros_commands.txt
kinect_vision/: CMakeLists.txt  extra stuff  mainpage.dox  manifest.xml  rviz_config.vcg
kinect_vision/src/: kinect_vision.cpp
manipulate_paper/: #manifest.xml#  CMakeLists.txt  CMakeLists.txt~  frames.gv  mainpage.dox  manifest.xml  notes.txt  table_scene_lms_1.pcd  table_scene_lms_2.pcd
manipulate_paper/Worlds/: looking_at_object_arms_folded
manipulate_paper/data/: #rosTopic.txt#  .#rosTopic.txt  in.txt  rosTopic.txt
manipulate_paper/include/manipulate_paper/: movements.h
manipulate_paper/motion_plans/: fold_motion.plan
manipulate_paper/scripts/: laser.out  laserOut.txt  parseJointTopic.py  send_to_socket.go  start_look_tuck_lasers.sh
manipulate_paper/src/: #move_arm.py#  #testForce.cpp#  move_arm.py  move_head.cpp  move_head.cpp~  move_left_arm.cpp  move_server.cpp  movements.cpp  pick_and_place.py  prep.cpp  segment_table.cpp  simplePick.cpp  testForce.cpp
openCVTest/: CMakeLists.txt  mainpage.dox  manifest.xml
openCVTest/src/: findContours_demo.cpp
vision_test/: CMakeLists.txt
vision_test/src/nodelets/: image_nodelet.cpp
vision_test2/: CMakeLists.txt
vision_test2/src/nodelets/: disparity_nodelet.cpp  image_nodelet.cpp  image_nodelet.cpp~
vision_test2/src/nodes/: image_view.cpp
vision_test3/: CMakeLists.txt  mainpage.dox  manifest.xml  manifest.xml~
vision_test3/src/: vision_streaming.cpp
